--- a/config/corne.conf
+++ b/config/corne.conf
@@ -49,3 +49,15 @@ CONFIG_ZMK_USB_LOGGING=n
 
 # Không xóa bond khi khởi động
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+
+# ===== Mouse emulation (keyboard-driven) =====
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_MOUSE=y
+CONFIG_ZMK_POINTING_SCROLL=y
+
+# Mouse movement tuning
+CONFIG_ZMK_POINTING_MOUSE_ACCELERATION=1
+CONFIG_ZMK_POINTING_MOUSE_MAX_SPEED=12
+CONFIG_ZMK_POINTING_MOUSE_TIME_TO_MAX_SPEED_MS=200
+CONFIG_ZMK_POINTING_SCROLL_RATE=5
